# project-py

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/01-python-foundations/: README.md
docs/02-http-rest-auth/: README.md
docs/03-fastapi/: README.md
docs/04-postgresql-and-sql/: README.md
docs/05-sqlalchemy-and-alembic/: README.md
docs/06-auth-and-authorization/: README.md
docs/07-security-basics/: README.md
docs/08-engineering-and-testing/: README.md
docs/09-redis-and-celery/: README.md
docs/10-deployment/: README.md
docs/11-project-practice/: README.md
docs/12-refactoring-and-delivery/: README.md
examples/: README.md
examples/01-python-foundations/: README.md  syntax_basics.py
examples/02-http-rest-auth/: README.md
examples/03-fastapi/: README.md
examples/04-postgresql-and-sql/: README.md
examples/05-sqlalchemy-and-alembic/: README.md
examples/06-auth-and-authorization/: README.md
examples/07-security-basics/: README.md
examples/08-engineering-and-testing/: README.md
examples/09-redis-and-celery/: README.md
examples/10-deployment/: README.md
examples/11-project-practice/: README.md
examples/12-refactoring-and-delivery/: README.md
src/project_py/: __init__.py  main.py
src/project_py.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py
