[project]
name = "project-py"
version = "0.1.0"
description = "A learning repository for transitioning from frontend to Python full-stack development."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
